// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup slots should apply special classes when having multiple slots 1`] = `
<div
  class="input-group elements-3"
>
  <button>
    click!
  </button>
   
  <input
    type="text"
  />
  <input
    type="text"
  />
</div>
`;

exports[`InputGroup slots should have a slot for buttons 1`] = `
<div
  class="input-group elements-1"
>
  <button>
    click!
  </button>
   
</div>
`;

exports[`InputGroup slots should have a slot for inputs 1`] = `
<div
  class="input-group elements-1"
>
   
  <input
    type="text"
  />
</div>
`;
